--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -17,7 +17,10 @@
             <p class="card-text col">Stock: {{this.stock}}</p>
             <p class="card-text col">Precio: ${{this.price}}</p>
           </div>
-          <a href=/realtimeproducts/{{this._id}} class="btn btn-outline-primary">Ver más</a>
+          <div>
+            <a href=/realtimeproducts/{{this._id}} class="btn btn-outline-primary col">Ver más</a>
+            <a href="" class="btn btn-outline-primary col">Agregar</a>
+          </div>
         </div>
       </div>
     </div>
