--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -10,7 +10,7 @@
         </thead>
         <tbody>
 
-    {{#each cart}}
+    {{#each cart.products}}
     <tr>
         <td>{{this._id}}</td>
         <td>{{this.product.title}}</td>
