--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -34,6 +34,15 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/chat">Chat</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/register">register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/profile">Perfil</a>
+                </li>
             </ul>
         </div>
     </div>
