--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <h1>Formulario de Registro</h1>
         <form id="registration-form" method="POST">
             <label for="first_name">Nombre:</label>
