--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -55,4 +55,20 @@
   margin-top: 20px;
 }
 
+.inicio {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+.box-form-login {
+  display: flex;
+  flex-direction: column;
+}
+.box-form-login .formLogin {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /*# sourceMappingURL=styles.css.map */
