--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -4,6 +4,8 @@
 
 @import "./pages/_home";
 @import "./pages/_realTimeProducts";
-@import "./pages/_product"
+@import "./pages/_product";
+@import "./pages/_loginRegister";
+@import "./pages/_profile";
 
 //sass --watch src/public/scss:src/public/css
