--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,14 +1,14 @@
-<div>
-    <h1>Inicio de Sesión</h1>
-    <form method="POST" id="loginForm">
-        <label for="email">Correo electrónico:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <button type="submit">Iniciar Sesión</button>
-    </form>
+<div class="container">
+    <h1 class="inicio">Inicio de Sesión</h1>
+    <div class="box-form-login">
+        <form method="POST" id="loginForm"  class="formLogin">
+            <label for="email">Correo electrónico:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Iniciar Sesión</button>
+        </form>
+    </div>
     <button onclick="location.href='/register'">Registrarse</button>
 </div>
 <script src="/js/login.js"></script>
