--- a/src/public/scss/pages/__loginRegister.scss
+++ b/src/public/scss/pages/__loginRegister.scss
@@ -2,6 +2,7 @@
     display: flex;
     text-align: center;
     justify-content: center;
+    margin-top: 100px;
 }
 
 .box-form-login{
@@ -11,5 +12,58 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        label{
+            margin-top: 20px;
+        }
+        input {
+            border-radius: 10px;
+            width: 40%;
+            margin-top: 20px;
+        }
+        .buttonsLogin {
+            width: 35%;
+            gap: 10px;
+            margin-top: 20px;
+            button {
+                border-radius: 10px;
+            }
+        }
+    }
+}
+
+.buttonRegister {
+    width: 20%;
+}
+
+///////////////////////////////////////////////////////
+
+.register{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.box-form-register {
+    display: flex;
+    flex-direction: column;
+    .formRegister {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        label{
+            margin-top: 20px;
+        }
+        input {
+            border-radius: 10px;
+            width: 40%;
+            margin-top: 20px;
+        }
+        button {
+            width: 35%;
+            gap: 10px;
+            margin-top: 20px;
+            border-radius: 10px;
+        }
     }
 }
