--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,22 +1,19 @@
 <div class="container">
-    <h1>Formulario de Registro</h1>
-        <form id="registration-form" method="POST">
-            <label for="first_name">Nombre:</label>
-            <input type="text" id="first_name" name="first_name" required>
-            <br>
-            <label for="last_name">Apellido:</label>
-            <input type="text" id="last_name" name="last_name" required>
-            <br>
-            <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" name="email" required>
-            <br>
-            <label for="age">Edad:</label>
-            <input type="number" id="age" name="age" required>
-            <br>
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <button type="button" id="register-button">Registrarse</button>
-        </form>
+    <h1 class="register">Formulario de Registro</h1>
+        <div class="box-form-register">
+            <form id="registration-form" method="POST" class="formRegister">
+                <label for="first_name">Nombre:</label>
+                <input type="text" id="first_name" name="first_name" required>
+                <label for="last_name">Apellido:</label>
+                <input type="text" id="last_name" name="last_name" required>
+                <label for="email">Correo electrónico:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="age">Edad:</label>
+                <input type="number" id="age" name="age" required>
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="password" required>
+                <button type="button" id="register-button" class="btn btn-outline-primary">Registrarse</button>
+            </form>
+        </div>
 </div>
 <script src="/js/register.js"></script>
