--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -23,6 +23,8 @@
         </div>  
         <label class="label" for="thumbnail">Imagen</label>
         <input class="controls thumbnail" type="text" name="thumbnail" id="thumbnail" placeholder="imagen.jpg" />
+        <label class="label" for="category">Category</label>
+        <input class="controls category" type="text" name="category" id="category" placeholder="category" required />
         <button class="btn btn-outline-success" id="add-btn" type="submit">Registrar</button>  
       </form>
     </div>
